@@ -1,5 +1,6 @@
 package greencity.service;
 
+import static greencity.utils.SpecificationUtils.setValueIfNotEmpty;
 import greencity.achievement.AchievementCalculation;
 import greencity.client.RestClient;
 import greencity.client.UserRemoteClient;
@@ -35,15 +36,17 @@ import greencity.enums.AchievementCategoryType;
 import greencity.enums.NotificationType;
 import greencity.enums.Role;
 import greencity.enums.TagType;
+import greencity.mapping.PageableAdvancedDtoMapper;
+import greencity.rating.constant.RatingPointsNames;
+import greencity.repository.RatingPointsRepo;
 import greencity.exception.exceptions.BadRequestException;
 import greencity.exception.exceptions.NotFoundException;
 import greencity.exception.exceptions.NotSavedException;
+import greencity.filters.EcoNewsSearchSpecification;
 import greencity.filters.EcoNewsSpecification;
 import greencity.filters.SearchCriteria;
 import greencity.rating.RatingCalculation;
-import greencity.rating.constant.RatingPointsNames;
 import greencity.repository.EcoNewsRepo;
-import greencity.repository.RatingPointsRepo;
 import greencity.repository.UserRepo;
 import jakarta.persistence.criteria.CriteriaBuilder;
 import jakarta.persistence.criteria.Join;
@@ -56,11 +59,12 @@ import org.apache.commons.lang3.StringUtils;
 import org.modelmapper.ModelMapper;
 import org.modelmapper.TypeToken;
 import org.springframework.cache.annotation.CacheEvict;
-import org.springframework.cache.annotation.EnableCaching;
 import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
+import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
@@ -75,7 +79,6 @@ import org.springframework.web.reactive.function.client.WebClientRequestExceptio
 import org.springframework.web.reactive.function.client.WebClientResponseException;
 
 @Service
-@EnableCaching
 @Transactional
 @RequiredArgsConstructor
 @Slf4j
@@ -90,9 +93,9 @@ public class EcoNewsServiceImpl implements EcoNewsService {
     private final List<String> languageCode = List.of("en", "uk");
     private final UserService userService;
     private final UserRepo userRepo;
-    private final CommentService commentService;
     private final UserNotificationService userNotificationService;
     private final RatingPointsRepo ratingPointsRepo;
+    private final PageableAdvancedDtoMapper<EcoNewsGenericDto> pageableAdvancedDtoMapper;
 
     private static final String ECO_NEWS_TITLE = "title";
     private static final String ECO_NEWS_JOIN_TAG = "tags";
@@ -124,7 +127,7 @@ public class EcoNewsServiceImpl implements EcoNewsService {
     @Override
     public EcoNewsGenericDto saveEcoNews(AddEcoNewsDtoRequest addEcoNewsDtoRequest, MultipartFile image, String email) {
         EcoNews toSave = genericSave(addEcoNewsDtoRequest, image, email);
-        final EcoNewsGenericDto ecoNewsDto = getEcoNewsGenericDtoWithAllTags(toSave);
+        final EcoNewsGenericDto ecoNewsDto = modelMapper.map(toSave, EcoNewsGenericDto.class);
         UserVO user = userService.findNotDeactivatedByEmail(email);
         ratingCalculation.ratingCalculation(ratingPointsRepo.findByNameOrThrow(RatingPointsNames.CREATE_NEWS), user);
         achievementCalculation.calculateAchievement(user,
@@ -187,19 +190,18 @@ public class EcoNewsServiceImpl implements EcoNewsService {
     private PageableAdvancedDto<EcoNewsGenericDto> buildPageableAdvancedGenericDto(Page<EcoNews> ecoNewsPage,
         Long currentUserId) {
         List<EcoNewsGenericDto> ecoNewsDtos = ecoNewsPage.stream()
-            .map(ecoNews -> getEcoNewsGenericDtoWithEnTags(ecoNews, currentUserId))
-            .collect(Collectors.toList());
+            .map(ecoNews -> {
+                EcoNewsGenericDto dto = modelMapper.map(ecoNews, EcoNewsGenericDto.class);
+                if (isCurrentUserFollower(ecoNews, currentUserId)) {
+                    dto.setFavorite(true);
+                }
+                return dto;
+            })
+            .toList();
 
-        return new PageableAdvancedDto<>(
-            ecoNewsDtos,
-            ecoNewsPage.getTotalElements(),
-            ecoNewsPage.getPageable().getPageNumber(),
-            ecoNewsPage.getTotalPages(),
-            ecoNewsPage.getNumber(),
-            ecoNewsPage.hasPrevious(),
-            ecoNewsPage.hasNext(),
-            ecoNewsPage.isFirst(),
-            ecoNewsPage.isLast());
+        Page<EcoNewsGenericDto> pageResult = new PageImpl<>(ecoNewsDtos, ecoNewsPage.getPageable(),
+            ecoNewsPage.getTotalElements());
+        return pageableAdvancedDtoMapper.convert(pageResult);
     }
 
     /**
@@ -257,7 +259,11 @@ public class EcoNewsServiceImpl implements EcoNewsService {
 
     @Override
     public PageableDto<SearchNewsDto> search(Pageable pageable, String searchQuery, Boolean isFavorite, Long userId) {
-        return getSearchNewsDtoPageableDto(ecoNewsRepo.find(pageable, searchQuery, isFavorite, userId));
+        List<SearchCriteria> criteriaList = new ArrayList<>();
+        setValueIfNotEmpty(criteriaList, "text", searchQuery);
+        setValueIfNotEmpty(criteriaList, "isFavorite", isFavorite);
+        Specification<EcoNews> specification = new EcoNewsSearchSpecification(criteriaList, userId);
+        return getSearchNewsDtoPageableDto(ecoNewsRepo.findAll(specification, pageable));
     }
 
     private PageableDto<SearchNewsDto> getSearchNewsDtoPageableDto(Page<EcoNews> page) {
@@ -356,7 +362,7 @@ public class EcoNewsServiceImpl implements EcoNewsService {
             userRemoteClient.deleteFile(toUpdate.getImagePath());
             throw new NotSavedException(ErrorMessage.ECO_NEWS_NOT_SAVED);
         }
-        return getEcoNewsGenericDtoWithAllTags(toUpdate);
+        return modelMapper.map(toUpdate, EcoNewsGenericDto.class);
     }
 
     @Override
@@ -539,69 +545,10 @@ public class EcoNewsServiceImpl implements EcoNewsService {
         return criteriaList;
     }
 
-    private void setValueIfNotEmpty(List<SearchCriteria> searchCriteria, String key, String value) {
-        if (StringUtils.isNotEmpty(value)) {
-            searchCriteria.add(SearchCriteria.builder()
-                .key(key)
-                .type(key)
-                .value(value)
-                .build());
-        }
-    }
-
     private List<EcoNewsDto> mapEcoNewsListToEcoNewsDtoList(List<EcoNews> ecoNewsList) {
         return ecoNewsList.stream()
             .map(ecoNews -> modelMapper.map(ecoNews, EcoNewsDto.class))
             .toList();
-    }
-
-    private EcoNewsGenericDto getEcoNewsGenericDtoWithAllTags(EcoNews ecoNews) {
-        List<String> tags = ecoNews.getTags().stream()
-            .flatMap(t -> t.getTagTranslations().stream())
-            .map(TagTranslation::getName)
-            .collect(Collectors.toList());
-
-        return buildEcoNewsGenericDto(ecoNews, tags, null);
-    }
-
-    private EcoNewsGenericDto getEcoNewsGenericDtoWithEnTags(EcoNews ecoNews, Long currentUserId) {
-        List<String> tags = new ArrayList<>();
-        for (String language : languageCode) {
-            tags.addAll(ecoNews.getTags().stream()
-                .flatMap(t -> t.getTagTranslations().stream())
-                .filter(t -> t.getLanguageCode().equals(language))
-                .map(TagTranslation::getName)
-                .toList());
-        }
-
-        return buildEcoNewsGenericDto(ecoNews, tags, currentUserId);
-    }
-
-    private EcoNewsGenericDto buildEcoNewsGenericDto(EcoNews ecoNews, List<String> tags, Long currentUserId) {
-        User author = ecoNews.getAuthor();
-        EcoNewsAuthorDto ecoNewsAuthorDto = new EcoNewsAuthorDto(author.getId(), author.getName());
-
-        int countOfComments = commentService.countCommentsForEcoNews(ecoNews.getId());
-        int countOfEcoNews = ecoNewsRepo.totalCountOfCreationNews();
-
-        boolean isFavorite = isCurrentUserFollower(ecoNews, currentUserId);
-
-        return EcoNewsGenericDto.builder()
-            .id(ecoNews.getId())
-            .imagePath(ecoNews.getImagePath())
-            .author(ecoNewsAuthorDto)
-            .tagsEn(tags.stream().filter(tag -> tag.matches("^([A-Za-z-])+$")).collect(Collectors.toList()))
-            .tagsUk(tags.stream().filter(tag -> tag.matches("^([А-Яа-яієїґ'-])+$")).collect(Collectors.toList()))
-            .shortInfo(ecoNews.getShortInfo())
-            .content(ecoNews.getText())
-            .title(ecoNews.getTitle())
-            .creationDate(ecoNews.getCreationDate())
-            .source(ecoNews.getSource())
-            .likes(ecoNews.getUsersLikedNews() != null ? ecoNews.getUsersLikedNews().size() : 0)
-            .countComments(countOfComments)
-            .countOfEcoNews(countOfEcoNews)
-            .isFavorite(isFavorite)
-            .build();
     }
 
     private boolean isCurrentUserFollower(EcoNews ecoNews, Long currentUserId) {
@@ -772,7 +719,8 @@ public class EcoNewsServiceImpl implements EcoNewsService {
 
             if (econewsAuthor != null) {
                 userNotificationService.removeActionUserFromNotification(
-                    modelMapper.map(econewsAuthor, UserVO.class), userVO, ecoNews.getId(), NotificationType.EVENT_LIKE);
+                    modelMapper.map(econewsAuthor, UserVO.class), userVO, ecoNews.getId(),
+                    NotificationType.ECONEWS_LIKE);
             }
             return true;
         }
